# vm-expedientes-minedu

./: .dockerignore  .env.example  .envsk-proj-1m4gCx8f6ksJCbl545iHUO-RR-G5YR0MG_hiEc63mn3nke-yaEAsyvCc6c4-DvOP6oHmJFzM36T3BlbkFJ8gmCz5SN5eOUhU-EfhpadxCSty09pC7A58UG0XQ9YoUE3Q2_8nKOjTz65nUVwoRBw-RkCl08kA  .gitignore  .pre-commit-config.yaml  AGENDA_SEGURIDAD_MINEDU.md  AUDITORÍA_CURSOR.md  CHANGELOG.md  CLAUDE.md  COMANDOS_PARA_24_JUN_2025.md  CONTEXTO_ACTUALIZADO_PROYECTO.md  CONTEXTO_ANTIALUCINACIONES_FINAL.md  CONTEXTO_CLAUDE_PERSISTENTE.md  CONTEXTO_COMPLETO_PROYECTO.md  CONTEXTO_COMPLETO_PROYECTO_23_JUN_2025.md  CONTEXTO_PROYECTO.md  CONTROL_PROYECTO.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_LOG_v1.3.0.md  DEPLOYMENT_MANUAL.md  Dockerfile  Dockerfile.professional  EJECUCION_PASO_A_PASO.md  ENTERPRISE_DEPLOYMENT_GUIDE.md  ENTERPRISE_INTEGRATION_GUIDE.md  ESTADO_PROYECTO_23_JUN_2025.md  ESTRATEGIA_EB1A_DETALLADA.md  FINAL_COMMIT_INSTRUCTIONS.sh  GEMINI.md  INSTRUCCIONES_CLAUDE_CODE.md  INSTRUCCIONES_CLAUDE_CODE.txt  INSTRUCCIONES_IMPLEMENTACION_CAMELOT.md  INSTRUCCIONES_OCR.md  INTEGRACION_COMPLETADA.md  INVESTIGACION_COMPLETA_PROYECTO.md  LICENSE  MAQUETA_IMPLEMENTACION_CLAUDE.md  METODOLOGIA_INVESTIGACION.md  Makefile  PIPELINE_IMPLEMENTACION.md  (+148 more)
.claude/: settings.local.json
.github/workflows/: ci-cd-professional.yml  ci-cd.yml  python-quality.yml  security-audit.yml
archive/: diagnose_dataset_plain.py  fix_bm25_error.py  hybrid_system_implementation.py  inspeccionar_bm25.py  part2a_consequence_questions.py  part3b_finalize_and_report.py  sprint12_part1_setup_evaluators.py  test_bm25_completo.py  test_consultas_final.py  test_final.py  test_sistema_completo_final.py  test_sistemas_simplificado.py  validate_sprint_1_1.py  verificar_bm25.py
backend/: config_paths.py  requirements.txt  setup.py  test_viaticos.json
backend/backend/: pyproject.toml
backend/backend/src/config/: paths.py
backend/src/: __init__.py  main.py
backend/tests/: test_main.py  test_professional_langgraph.py
backup-docker/: containers-list.txt  images-list.txt  volumes-list.txt
config/: admin.yaml  logging_config.py  models.yaml  plugins.yaml  settings.py  settings_secure.example.py  settings_secure.py
config/logstash/: logstash.conf
config/prometheus/: prometheus.yml  rules.yml
context/: 00_ingenieria_contexto.md  snapshot.json
data/: adaptive_examples.json  adaptive_independent_results.json  adaptive_standalone_results.json  adaptive_test_results.json  demo_final_results.json  learned_patterns.json  test_cases_oficiales.json
data/evaluation/: ground_truth_manual.json  hybrid_system_evaluation_20250612_225320.json  hybrid_system_evaluation_20250612_225406.json  sprint_1_3_comparison_1749784602.json  test_queries_advanced.json  test_queries_basic.json  test_queries_edge_cases.json
data/processed/: chunks.json  chunks.txt  chunks_directiva_limpia.json  chunks_limpios.json  chunks_quality_report.json  chunks_v2.json  chunks_v2_cleaned_problematic.json  directiva_011_2020.json  sample_chunks.json  texto_limpio.txt  vectorstore_bm25_test.pkl  vectorstore_directiva_limpia.pkl  vectorstore_semantic.pkl  vectorstore_semantic_full_limpio.pkl  vectorstore_semantic_full_v2.pkl  vectorstore_semantic_v2.pkl  vectorstore_transformers_test.pkl
data/processing_results/: processing_result_20250620_183033.json  processing_result_20250620_183322.json  processing_result_20250621_183019.json  processing_result_20250621_184638.json
data/raw/: resultado.txt  resultado_limpio.txt
data/vectorstore/: vectorstore.pkl
data/vectorstores/: bm25.pkl  tfidf.pkl  transformers.pkl
docs/: ANTI_ALUCINACIONES_PERMANENTE.md  ARCHITECTURE.md  DEPLOYMENT.md  README.md  SECURITY.md  sprint_1_1_completion.md  sprint_1_2_plan.md
docs/arquitectura/: arquitectura.md  diagrama_componentes.md  flujo_datos.md  migracion_langchain.md
docs/diario/: 2025-05-26_mejora_extraccion_entidades.md  2025-06-03_avance_commit_github.md  2025-07-01_analisis_sistema_actual_y_plan_migracion.md  2025-07-01_plan_migracion_langchain.md  2025-07-01_plan_migracion_langchain_completo.md  README.md
docs/plan_accion_mvp/: 2025-03-28_avance.md  RUTA_DESARROLLO_MVP.md
docs/security/: README.md
frontend/: next.config.js  package.json  streamlit_professional.py
frontend-new/: .env.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend-new/.next/: prerender-manifest.js  routes-manifest.json  trace
frontend-new/app/: globals.css  layout.tsx  page.tsx
frontend-new/components/: ChatInterface.tsx  DocumentUploader.tsx  HybridSearchUI.tsx  MetricsDashboard.tsx  ModernChatUI.tsx  SimpleChat.tsx  search-interface.tsx
frontend/app/: layout.tsx  page.tsx
paper_cientifico/: evaluate_paper.py
paper_cientifico/dataset/: additional_questions_19.json  additional_questions_19_fixed.json  golden_dataset.json  golden_dataset.json.backup_20250608_180755  golden_dataset_expanded.json
paper_cientifico/paper_final/: paper_sistema_hibrido.md  resumen_ejecutivo.json
paper_cientifico/reports/: dataset_expansion_report_20250608_183346.json
presentacion_final/: presentacion.html  presentacion_sistema_hibrido.md  resumen_presentacion.txt
reports/: correcciones_y_pruebas_20250613_013238.json  test_consultas_directiva_20250613_015745.json  test_consultas_directiva_20250613_144125.json  test_sistema_completo_20250613_144528.json  verificacion_proyecto_20250613_012418.json
resultados_experimento/: resultado_20250608_191417.json
scripts/: format_code.py  metrics.py  verificacion_antialucinaciones.sh
src/: __init__.py  chunker.py  generate_vectorstore_full_v2.py  generate_vectorstore_semantic.py  search_vectorstore_semantic.py  text_cleaner.py
tests/: __init__.py  extract_info.py  test_api_boost.py  test_hybrid_search_boost.py  test_hybrid_searcher.py  test_minedu_pipeline.py  test_ocr.py  test_pdftotext.py  test_retrieval.py  test_snapshot.py  test_text_processor.py  test_universal_extractor.py  test_viaticos_reglas.py
tools/: daily_checklist.md  verificacion_v2_0.sh
(+304 files in other folders)
