[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minedu-backend"
version = "0.1.0"
authors = [
  { name="MINEDU", email="example@minedu.gob.pe" },
]
description = "Backend for MINEDU document processing system"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/minedu/vm-expedientes-minedu"
